--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
 			justify-content: center;
 			margin: 0;
 		}
+		
 		.container1{
 			grid-template-rows: auto auto;
 			grid-template-columns: auto;
 		}
+		
 		.heading1{
 			text-align: center;
 			font-family: Arial, sans-serif;
@@ -23,6 +25,7 @@
 			grid-row: 1/2
 			grid-column: 1/2;
 		}
+		
 		.tree{
 			position: absolute;
 			width: 70vh;
@@ -31,6 +34,7 @@
 			left: -11vh;
 			z-index: -2;
 		}
+		
 		.canvas{
 			position:absolute;
 			width: 100vw;
@@ -38,21 +42,39 @@
 			margin: 0;
 			z-index:-1;
 		}
+		
 		.para{
 			grid-row: 2/3;
 			grid-column: 1/2;
+		}
+		
+		.container2{
+			display: grid;
+			grid-template-columns: auto auto;
+			grid-template-rows: auto;
+			justify-content: center;
+			margin-top: 8vh;			
+		}
+		
+		.link1{
+			margin-right: 8vh;
 		}
 	</style>
 </head>
 
 <body>
 	<canvas class="canvas"></canvas>
-	<!--<a href="https://prabh1804.github.io/Mind_Mapper.github.io/">mind mapper</a>-->
 	<img src="tree1.png" alt="tree here" class="tree">
-	<div class="container1">
-		<h1 class="heading1">Welcome</h1>
-		<p class="para1">Hey, I'm 19Years old frontend Developer and here you can see my work, I use Vanilla Javascript, CSS and Html5 for my project<br> I enjoy to learn new thing and building projects with them, Please checkout my work on github<br> I'm active on github and creates free and open sources projects on them Please check them out on links given below</p>
-	</div>
+	<div class="container3">
+		<div class="container1">
+			<h1 class="heading1">Welcome</h1>
+			<p class="para1">Hey, I'm 19Years old frontend Developer and here you can see my work, I use Vanilla Javascript, CSS and Html5 for my project<br> I enjoy to learn new thing and building projects with them, Please checkout my work on github<br> I'm active on github and creates free and open source projects on them, check them out on links given below</p>
+		</div>
+		<div class="container2">
+			<a href="https://Prabh1804.github.io" class="link1">My website</a>
+			<a href="https://Prabh1804.github.io/Mind_Mapper.github.io">Mind Mapper</a>
+		</div>
+	</div><!--the p tag is to long but i dont want to write it in 3 lines-->
 	<script>
 		let frame = 0;
 		const canvas = document.querySelector(".canvas");
@@ -75,11 +97,11 @@
                         this.x = Math.random() * canvas.width;
                         this.y = 0;
                     	}
-           			}
+           		}
 				update(){
 						this.x += this.speedX;
 						this.y += this.speedY;
-					}
+				}
 				draw(){
 		    			ctx.drawImage(img, frame*200, 0, 200, 100, this.x, this.y, this.size, this.size);
 					}
