--- a/index.html
+++ b/index.html
@@ -3,65 +3,8 @@
 
 <head>
     <title>website</title>
-	<style>
-		body{
-			display: grid;
-			background: linear-gradient(to bottom, #f0f0f0, #7deb6a);
-			width: 100vw;
-			height: 100vh;
-			justify-content: center;
-			margin: 0;
-		}
-		
-		.container1{
-			grid-template-rows: auto auto;
-			grid-template-columns: auto;
-		}
-		
-		.heading1{
-			text-align: center;
-			font-family: Arial, sans-serif;
-			color: #333;
-			grid-row: 1/2
-			grid-column: 1/2;
-		}
-		
-		.tree{
-			position: absolute;
-			width: 70vh;
-			height: 70vh;
-			top: 36vh;
-			left: -11vh;
-			z-index: -2;
-		}
-		
-		.canvas{
-			position:absolute;
-			width: 100vw;
-			height: 100vh;
-			margin: 0;
-			z-index:-1;
-		}
-		
-		.para{
-			grid-row: 2/3;
-			grid-column: 1/2;
-		}
-		
-		.container2{
-			display: grid;
-			grid-template-columns: auto auto;
-			grid-template-rows: auto;
-			justify-content: center;
-			margin-top: 8vh;			
-		}
-		
-		.link1{
-			margin-right: 8vh;
-		}
-	</style>
+	<link href="style.css" rel="stylesheet"
 </head>
-
 <body>
 	<canvas class="canvas"></canvas>
 	<img src="tree1.png" alt="tree here" class="tree">
@@ -75,55 +18,6 @@
 			<a href="https://Prabh1804.github.io/Mind_Mapper.github.io">Mind Mapper</a>
 		</div>
 	</div><!--the p tag is to long but i dont want to write it in 3 lines-->
-	<script>
-		let frame = 0;
-		const canvas = document.querySelector(".canvas");
-    	const ctx = canvas.getContext("2d");
-    	const img = new Image();
-    	img.src = "sprite2.png";
-    	let leaveArray = [];
-    	img.onload = function(){
-    	 	canvas.width = window.innerWidth ;
-       		canvas.height = window.innerHeight ;
-       		class Leave{
-      			constructor(){
-	       			this.size = Math.random()*10 + 15;
-           			this.speedX = -Math.random()*0.25 - 0.4;
-           			this.speedY = Math.random()*0.25 + 0.4;
- 					if (Math.random() < 0.5) {
-                        this.x = canvas.width;
-                        this.y = Math.random() * canvas.height;
-                    } else {
-                        this.x = Math.random() * canvas.width;
-                        this.y = 0;
-                    	}
-           		}
-				update(){
-						this.x += this.speedX;
-						this.y += this.speedY;
-				}
-				draw(){
-		    			ctx.drawImage(img, frame*200, 0, 200, 100, this.x, this.y, this.size, this.size);
-					}
-           		}
-           		
-           	function adder(){
-           		leaveArray.push(new Leave());
-           		setTimeout(adder, 500);
-           	}
-           	adder();
-
-           	function handle(){
-            	ctx.clearRect(0,0,canvas.width,canvas.height);
-            		
-         		for(let i = 0; i < leaveArray.length; i++){
-           			leaveArray[i].draw();
-           			leaveArray[i].update();
-           		}
-           		requestAnimationFrame(handle);
-           	}
-    		requestAnimationFrame(handle);
-    	};
-	</script>
+	<script src="canvas.js"></script>
 </body>
 </html>
