about section of desktop-first done

--- a/index.html
+++ b/index.html
@@ -6,18 +6,36 @@
 	<link href="style.css" rel="stylesheet"
 </head>
 <body>
-	<canvas class="canvas"></canvas>
-	<img src="tree1.png" alt="tree here" class="tree">
-	<div class="container3">
+	<!-- <canvas class="canvas"></canvas> -->
+	<!-- <img src="tree1.png" alt="tree here" class="tree"> -->
+	<div class="about"> 
+		<div class="header">
+			<div class="logo"><img src="prabhlogo1.png" class="prabhlogo"/></div>
+				<ul class="ul">
+					<li class="li">About</li>
+					<li class="li">Project</li>
+					<li class="li">Contact</li>
+				</ul>
+		</div>
 		<div class="container1">
-			<h1 class="heading1">Welcome</h1>
-			<p class="para1">Hey, I'm 19Years old frontend Developer and here you can see my work, I use Vanilla Javascript, CSS and Html5 for my project<br> I enjoy to learn new thing and building projects with them, Please checkout my work on github<br> I'm active on github and creates free and open source projects on them, check them out on links given below</p>
+			<h1 class="heading1">Hi, I'm Prabh, a <strong class="strong">front-end</strong> developer</h1>
+			<p class="para1">
+			I,m a self-taught front-end developer, 
+			primarily focused on Javascript and React. 
+			Feel free to browse through my portfolio, 
+			and if you're intrested, don't hesitate to 
+			reach out.
+			</p>
 		</div>
-		<div class="container2">
-			<a href="https://Prabh1804.github.io" class="link1">My website</a>
-			<a href="https://Prabh1804.github.io/Mind_Mapper.github.io">Mind Mapper</a>
-		</div>
-	</div><!--the p tag is to long but i dont want to write it in 3 lines-->
-	<script src="canvas.js"></script>
+	</div>
+	<div class="projects">
+		<a href="https://Prabh1804.github.io" class="link1">My website</a>
+		<a href="https://Prabh1804.github.io/Mind_Mapper.github.io">Mind Mapper</a>
+	</div>
+	<div class="contact">
+		
+	</div>
+	<footer class="footer"><span>Designed & Build with</span><img class="heartlogo2" src="heartlogo2.png"/><span>by Prabhdeep Singh</span></footer>
+	<!-- <script src="canvas.js"></script> -->
 </body>
 </html>
