added first project only in desktop region

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 		<div class="header">
 			<div class="logo"><img src="prabhlogo1.png" class="prabhlogo"/></div>
 				<ul class="ul">
-					<li class="li">About</li>
-					<li class="li">Project</li>
-					<li class="li">Contact</li>
+					<li onclick="go_to_about()" class="li">About</li>
+					<li onclick="go_to_project()" class="li">Project</li>
+					<li onclick="go_to_contact()" class="li">Contact</li>
 				</ul>
 		</div>
 		<div class="container1">
@@ -29,13 +29,29 @@
 		</div>
 	</div>
 	<div class="projects">
-		<a href="https://Prabh1804.github.io" class="link1">My website</a>
-		<a href="https://Prabh1804.github.io/Mind_Mapper.github.io">Mind Mapper</a>
+		<span class="span1"><img src="desktoplogo.png" class="desktoplogo"/>Projects</span>
+		<div class="project1">
+			<a href="https://Prabh1804.github.io/Mind_Mapper.github.io" class="link1">
+				<img src="projectimg1.png" class="projectimg1"/>
+			</a>
+			<div class="project1about">
+				<h2 class="project1h2">Mind Mapper</h2>
+				<a href="https://github.com/Prabh1804/Mind_Mapper.github.io" class="githublink1">
+					<img src="githublogo1.png" class="githublogo"/>
+				</a>
+			</div>
+		</div>
+		<p class="project1para">
+			I have created a useful ideas holding website, which can record you future planning 
+			or todo thing so that if you forget them you can cameback and find your direction. 
+			I created it with HTML, CSS and Javascript. Still in it's final developement and 
+			hoping it to help peoples.
+		</p> 
 	</div>
 	<div class="contact">
 		
 	</div>
 	<footer class="footer"><span>Designed & Build with</span><img class="heartlogo2" src="heartlogo2.png"/><span>by Prabhdeep Singh</span></footer>
-	<!-- <script src="canvas.js"></script> -->
+	<script src="script.js"></script> 
 </body>
 </html>
