completed first satge of responsiveness

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<!-- <canvas class="canvas"></canvas> -->
 	<!-- <img src="tree1.png" alt="tree here" class="tree"> -->
 	<div class="about"> 
-		<div class="header">
+		<div class="navbar">
 			<div class="logo"><img src="prabhlogo1.png" class="prabhlogo"/></div>
 				<ul class="ul">
 					<li onclick="go_to_about()" class="li">About</li>
@@ -17,7 +17,7 @@
 					<li onclick="go_to_contact()" class="li">Contact</li>
 				</ul>
 		</div>
-		<div class="container1">
+		<div class="introduction">
 			<h1 class="heading1">Hi, I'm Prabh, a <strong class="strong">front-end</strong> developer</h1>
 			<p class="para1">
 			I,m a self-taught front-end developer, 
@@ -29,7 +29,7 @@
 		</div>
 	</div>
 	<div class="projects">
-		<span class="span1"><img src="desktoplogo.png" class="desktoplogo"/>Projects</span>
+		<span class="projecth1"><img src="desktoplogo.png" class="desktoplogo"/>Projects</span>
 		<div class="project1">
 			<a href="https://Prabh1804.github.io/Mind_Mapper.github.io" class="link1">
 				<img src="projectimg1.png" class="projectimg1"/>
