project 2: dragonGame added

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>website</title>
-	<link href="style.css" rel="stylesheet"
+	<link href="style.css" rel="stylesheet"/>
 </head>
 <body>
 	<!-- <canvas class="canvas"></canvas> -->
@@ -14,13 +14,13 @@
 				<ul class="ul">
 					<li onclick="go_to_about()" class="li">About</li>
 					<li onclick="go_to_project()" class="li">Project</li>
-					<li onclick="go_to_contact()" class="li">Contact</li>
+					<li onclick="go_to_contact()" class="li" on>Contact</li>
 				</ul>
 		</div>
 		<div class="introduction">
 			<h1 class="heading1">Hi, I'm Prabh, a <strong class="strong">front-end</strong> developer</h1>
 			<p class="para1">
-			I,m a self-taught front-end developer, 
+			I'm a self-taught front-end developer,
 			primarily focused on Javascript and React. 
 			Feel free to browse through my portfolio, 
 			and if you're intrested, don't hesitate to 
@@ -47,6 +47,24 @@
 			I created it with HTML, CSS and Javascript. Still in it's final developement and 
 			hoping it to help peoples.
 		</p> 
+		<div class="project2" id = "#project2">
+			<a href="#project2" class="link2">
+				<img src="projectimg2.png" class="projectimg2"/>
+			</a>
+			<div class="project2about">
+				<h2 class="project2h2">Dragon Game</h2>
+				<a href="https://github.com/Prabh1804/dragonGame" class="githublink2">
+					<img src="githublogo1.png" class="githublogo"/>
+				</a>
+			</div>
+		</div>
+		<p class="project2para">
+			I have created a playful, mind relaxing game, which can give you a fresh
+			refreshment when you are stressed and working hard.
+			I created it with HTML, CSS and Javascript. Still in it's final developement and
+			hoping people will enjoy it.
+		</p>
+
 	</div>
 	<div class="contact">
 		
