added link to project h2

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 				<img src="projectimg1.png" class="projectimg1"/>
 			</a>
 			<div class="project1about">
-				<h2 class="project1h2">Mind Mapper</h2>
+				<a href="https://Prabh1804.github.io/Mind_Mapper.github.io">
+					<h2 class="project1h2">Mind Mapper</h2>
+				</a>
 				<a href="https://github.com/Prabh1804/Mind_Mapper.github.io" class="githublink1">
 					<img src="githublogo1.png" class="githublogo"/>
 				</a>
@@ -53,7 +55,9 @@
 				<img src="projectimg2.png" class="projectimg2"/>
 			</a>
 			<div class="project2about">
-				<h2 class="project2h2">Dragon Game</h2>
+				<a href="https://Prabh1804.github.io/dragonGame" >
+					<h2 class="project2h2">Dragon Game</h2>
+				</a>
 				<a href="https://github.com/Prabh1804/dragonGame" class="githublink2">
 					<img src="githublogo1.png" class="githublogo"/>
 				</a>
