dark and bright theme added

--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 
 <head>
     <title>website</title>
+
+
 	<link href="style.css" rel="stylesheet"/>
-</head>
+	<script src="script.js" ></script>
+
+
+	</head>
 <body>
 	<!-- <canvas class="canvas"></canvas> -->
 	<!-- <img src="tree1.png" alt="tree here" class="tree"> -->
@@ -16,6 +21,10 @@
 					<a href="#projects" class="navlink"><li class="li">Project</li></a>
 					<a href="#contact" class="navlink"><li  class="li" on>Contact</li></a>
 				</ul>
+
+				 <img src= "sun.svg" class="sun-button" onclick="sunFunc()">
+				 <img src= "moon.svg" class="moon-button" onclick="moonFunc()">
+
 				<img src="menubutton.svg" style="width: 12vw" class="menubutton" />
 		</div>
 		<div class="introduction">
