--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 
 	<link href="style.css" rel="stylesheet"/>
-	<script src="script.js" ></script>
+<!-- 	<script src="script.js" ></script> -->
 
 
 	</head>
@@ -25,7 +25,7 @@
 				 <img src= "sun.svg" class="sun-button" onclick="sunFunc()">
 				 <img src= "moon.svg" class="moon-button" onclick="moonFunc()">
 
-				<img src="menubutton.svg" style="width: 12vw" class="menubutton" />
+				<img src="menubutton.svg" style="width: 12vw" class="menubutton" onclick="menu()" />
 		</div>
 		<div class="introduction">
 			<h1 class="heading1">Hi, I'm Prabh, a <strong class="strong">front-end</strong> developer</h1>
@@ -83,13 +83,13 @@
 	<div class="contact" id="contact">
 	</div>
 	<footer class="footer"><span>Designed & Build with</span><img class="heartlogo2" src="heartlogo2.png"/><span>by Prabhdeep Singh</span></footer>
-	<script src="script.js"></script> 
 	<div class="menudiv">
-		<ul>
-			<li>About</li>
-			<li>Projects</li>
-			<li>Contact</li>
+		<ul onclick="menuRemove()">
+			<a href="#about" style="text-decoration: none; color: inherit;"><li>About</li></a>
+			<a href="#projects" style="text-decoration: none; color: inherit;"><li>Projects</li></a>
+			<a href="#contact" style="text-decoration: none; color: inherit;"><li>Contact</li></a>
 		</ul>
 	</div>
+	<script src="script.js"></script>
 </body>
 </html>
