only fixing menu button is left

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 <body>
 	<!-- <canvas class="canvas"></canvas> -->
 	<!-- <img src="tree1.png" alt="tree here" class="tree"> -->
-	<div class="about" id="about">
-		<div class="navbar">
+	<div class="navbar">
 			<div class="logo"><img src="prabhlogo1.png" class="prabhlogo"/></div>
 				<ul class="ul">
 					<a href="#about" class="navlink"><li  class="li">About</li></a>
@@ -22,11 +21,13 @@
 					<a href="#contact" class="navlink"><li  class="li" on>Contact</li></a>
 				</ul>
 
+				<img src="menubutton.svg" style="width: 12vw" class="menubutton" onclick="menu()" />
+
 				 <img src= "sun.svg" class="sun-button" onclick="sunFunc()">
 				 <img src= "moon.svg" class="moon-button" onclick="moonFunc()">
 
-				<img src="menubutton.svg" style="width: 12vw" class="menubutton" onclick="menu()" />
-		</div>
+	</div>
+	<div class="about" id="about">
 		<div class="introduction">
 			<h1 class="heading1">Hi, I'm Prabh, a <strong class="strong">front-end</strong> developer</h1>
 			<p class="para1">
@@ -54,10 +55,9 @@
 			</div>
 		</div>
 		<p class="project1para">
-			I have created a useful ideas holding website, which can record you future planning 
+			I just created a idea holding website, which can record you future planning
 			or todo thing so that if you forget them you can cameback and find your direction. 
-			I created it with HTML, CSS and Javascript. Still in it's final developement and 
-			hoping it to help peoples.
+			I created it using HTML, CSS and Javascript.
 		</p> 
 		<div class="project2" id = "#project2">
 			<a href="https://Prabh1804.github.io/dragonGame" class="link2">
@@ -73,14 +73,31 @@
 			</div>
 		</div>
 		<p class="project2para">
-			I have created a playful, mind relaxing game, which can give you a fresh
+			I just created game, which can give you a fresh
 			refreshment when you are stressed and working hard.
 			I created it with HTML, CSS and Javascript. Still in it's final developement and
 			hoping people will enjoy it.
 		</p>
 
 	</div>
+	<h2 style="font-family: monospace; color:white; text-align: center; font-size: 3.5rem;"> Contact </h2>
 	<div class="contact" id="contact">
+		<div class="linkedindiv">
+			<p style="font-size: 30px;"> message me on
+			<a href="https://www.linkedin.com/in/prabhdeep-singh-1308aa25a" style="text-decoration: none; color: inherit;">
+					<b style="color:orange;">linkedin</b></a> </p>
+			<a href="https://www.linkedin.com/in/prabhdeep-singh-1308aa25a" style="text-decoration: none; color: inherit;">
+				<img src="linkedinlogo.svg" class="linkedinlogo"/>
+			</a>
+		</div>
+		<div class="githubdiv">
+			<p style="font-size: 30px;">message me on
+			<a href="https://github.com/Prabh1804" style="text-decoration: none; color: inherit;">
+					<b style="color:orange;">Github</b></a></p>
+			<a href="https://github.com/Prabh1804" style="text-decoration: none; color: inherit;">
+				<img src="githublogo.svg" class="githubSVGlogo"/>
+			</a>
+		</div>
 	</div>
 	<footer class="footer"><span>Designed & Build with</span><img class="heartlogo2" src="heartlogo2.png"/><span>by Prabhdeep Singh</span></footer>
 	<div class="menudiv">
