--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 	<footer class="footer"><span>Designed & Build with</span><img class="heartlogo2" src="heartlogo2.png"/><span>by Prabhdeep Singh</span></footer>
 	<div class="menudiv">
 		<ul onclick="menuRemove()">
-			<a href="#about" style="text-decoration: none; color: inherit;"><li>About</li></a>
+			<a href="#about" style="text-decoration: none; color: inherit;"><li style="margin-top: 40px;">About</li></a>
 			<a href="#projects" style="text-decoration: none; color: inherit;"><li>Projects</li></a>
 			<a href="#contact" style="text-decoration: none; color: inherit;"><li>Contact</li></a>
 		</ul>
