finally everything is done but final touch can happen

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 			primarily focused on Javascript and React. 
 			Feel free to browse through my portfolio, 
 			and if you're intrested, don't hesitate to 
-			reach out.
+			reach out. Get in touch! let's chat and see
+			how we can work together.
 			</p>
 		</div>
 	</div>
@@ -57,7 +58,9 @@
 		<p class="project1para">
 			I just created a idea holding website, which can record you future planning
 			or todo thing so that if you forget them you can cameback and find your direction. 
-			I created it using HTML, CSS and Javascript.
+			I created it using HTML, CSS and Javascript. Giving it and different approch from
+			other common todo apps. Here you can sperate different todo tasks for different
+			objective on the same page and also align them with a single goal.
 		</p> 
 		<div class="project2" id = "#project2">
 			<a href="https://Prabh1804.github.io/dragonGame" class="link2">
@@ -73,17 +76,19 @@
 			</div>
 		</div>
 		<p class="project2para">
-			I just created game, which can give you a fresh
-			refreshment when you are stressed and working hard.
-			I created it with HTML, CSS and Javascript. Still in it's final developement and
-			hoping people will enjoy it.
+			I just created a game, it's actually for a 3 days mini game jam with Javascript
+			this game was inspired from other 2D canvas games but here we approch it
+			with a different concept of controls and positioning. It's actually a good game
+			for entertainment as it catches human brain attention and people love to play
+			a easy challenging game.
 		</p>
 
 	</div>
-	<h2 style="font-family: monospace; color:white; text-align: center; font-size: 3.5rem;"> Contact </h2>
+	<h2 style="font-family: monospace; color:white; text-align: center; font-size: 3.5rem; margin-top:0;
+	padding: 2vw; margin-bottom: 0;"> Contact </h2>
 	<div class="contact" id="contact">
 		<div class="linkedindiv">
-			<p style="font-size: 30px;"> message me on
+			<p style="font-size: 30px;"> Message me on
 			<a href="https://www.linkedin.com/in/prabhdeep-singh-1308aa25a" style="text-decoration: none; color: inherit;">
 					<b style="color:orange;">linkedin</b></a> </p>
 			<a href="https://www.linkedin.com/in/prabhdeep-singh-1308aa25a" style="text-decoration: none; color: inherit;">
@@ -91,7 +96,7 @@
 			</a>
 		</div>
 		<div class="githubdiv">
-			<p style="font-size: 30px;">message me on
+			<p style="font-size: 30px;">Message me on
 			<a href="https://github.com/Prabh1804" style="text-decoration: none; color: inherit;">
 					<b style="color:orange;">Github</b></a></p>
 			<a href="https://github.com/Prabh1804" style="text-decoration: none; color: inherit;">
@@ -99,7 +104,7 @@
 			</a>
 		</div>
 	</div>
-	<footer class="footer"><span>Designed & Build with</span><img class="heartlogo2" src="heartlogo2.png"/><span>by Prabhdeep Singh</span></footer>
+	<footer class="footer"><span>© 2024 Designed & Build with</span><img class="heartlogo2" src="heartlogo2.png"/><span>by Prabhdeep Singh</span></footer>
 	<div class="menudiv">
 		<ul onclick="menuRemove()">
 			<a href="#about" style="text-decoration: none; color: inherit;"><li style="margin-top: 40px;">About</li></a>
