--- a/index.html
+++ b/index.html
@@ -113,5 +113,6 @@
 		</ul>
 	</div>
 	<script src="script.js"></script>
+	<span class="resumeSpan"> Download Resume :  <a href="resume.pdf" download>Resume.pdf</a></span>
 </body>
 </html>
