resume added in nav

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 					<a href="#about" class="navlink"><li  class="li">About</li></a>
 					<a href="#projects" class="navlink"><li class="li">Project</li></a>
 					<a href="#contact" class="navlink"><li  class="li" on>Contact</li></a>
+					<a href="resume.pdf" class="navlink"><li  class="li" on>Resume</li></a>
 				</ul>
 
 				<img src="menubutton.svg" style="width: 12vw" class="menubutton" onclick="menu()" />
@@ -107,9 +108,10 @@
 	<footer class="footer"><span>© 2024 Designed & Build with</span><img class="heartlogo2" src="heartlogo2.png"/><span>by Prabhdeep Singh</span></footer>
 	<div class="menudiv">
 		<ul onclick="menuRemove()">
-			<a href="#about" style="text-decoration: none; color: inherit;"><li style="margin-top: 40px;">About</li></a>
-			<a href="#projects" style="text-decoration: none; color: inherit;"><li>Projects</li></a>
-			<a href="#contact" style="text-decoration: none; color: inherit;"><li>Contact</li></a>
+			<a href="#about" style="text-decoration: none; color: inherit;"><li style="margin-top: 40px;" class="li_menu_div">About</li></a>
+			<a href="#projects" style="text-decoration: none; color: inherit;"><li class="li_menu_div">Projects</li></a>
+			<a href="#contact" style="text-decoration: none; color: inherit;"><li class="li_menu_div">Contact</li></a>
+			<a href="resume.pdf" style="text-decoration: none; color: inherit;"><li class="li_menu_div">Resume</li></a>
 		</ul>
 	</div>
 	<script src="script.js"></script>
