--- a/index.html
+++ b/index.html
@@ -57,11 +57,8 @@
 			</div>
 		</div>
 		<p class="project1para">
-			I just created a idea holding website, which can record you future planning
-			or todo thing so that if you forget them you can cameback and find your direction. 
-			I created it using HTML, CSS and Javascript. Giving it and different approch from
-			other common todo apps. Here you can sperate different todo tasks for different
-			objective on the same page and also align them with a single goal.
+			I've just launched an idea management website, designed to help users record their future plans and to-do items, ensuring they never lose track of their direction. Built using<b style="color:#f47723"> HTML</b>,
+			<b style="color:#f47723"> CSS</b>, and <b style="color:#f47723">JavaScript</b>, it offers a unique approach compared to common to-do apps. <br><br>Users can organize their tasks by different objectives on the same page and align them with a single goal. Developing this app required more time due to its complexity, but the result is a powerful tool for managing ideas and tasks effectively.
 		</p> 
 		<div class="project2" id = "#project2">
 			<a href="https://Prabh1804.github.io/dragonGame" class="link2">
@@ -77,11 +74,7 @@
 			</div>
 		</div>
 		<p class="project2para">
-			I just created a game, it's actually for a 3 days mini game jam with Javascript
-			this game was inspired from other 2D canvas games but here we approch it
-			with a different concept of controls and positioning. It's actually a good game
-			for entertainment as it catches human brain attention and people love to play
-			a easy challenging game.
+			I've just created a game for a 3-day mini-game jam using JavaScript. This game was inspired by other 2D canvas games, but we approached it with a different concept for controls and positioning. It's actually quite engaging and entertaining, as it captures the attention of the human brain. People seem to love playing it, as it offers a balance of simplicity and challenge.
 		</p>
 
 	</div>
